--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-  <h1>
-    hello word!!
-  </h1>
+  <header>
+    <%- include('partials/header.ejs') %>
+  </header>
 
+  <h1>
+    Página Home
+  </h1>
 
   <%- include('partials/foot.ejs') %>
 </body>
